labs/kube/02-ingress/echoserver-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-pod
  namespace: echoserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-docker-tpl
    spec:
      serviceAccountName: echoserver-sa
      containers:
      - name: echo-docker
        image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc-lb
  labels:
    app: echo-svc-lb-label
  namespace: echoserver
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 81
    targetPort: 8080
    #nodePort: 30001 # valid range of ports is 30000-32767
  selector:
    app: echo-docker-tpl
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc-np
  labels:
    app: echo-svc-np-label
  namespace: echoserver
spec:
  type: NodePort
  ports:
  - name: http
    port: 82
    targetPort: 8080
    #nodePort: 30001 # valid range of ports is 30000-32767
  selector:
    app: echo-docker-tpl
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc-ci
  labels:
    app: echo-svc-ci-label
  namespace: echoserver
spec:
  type: ClusterIP # it's default
  ports:
  - name: http
    port: 83
    targetPort: 8080
    #nodePort: 30001 # valid range of ports is 30000-32767
  selector:
    app: echo-docker-tpl
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ing-np
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: echoserver
spec:
  backend:
    serviceName: echo-svc-np  # my default backend
    servicePort: 82
  rules:
  - host: port82.echoserver.local
    http:
      paths:
      - path: /port82
        backend:
          serviceName: echo-svc-np
          servicePort: 82
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ing-ci
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: echoserver
spec:
  rules:
  - host: port83.echoserver.local
    http:
      paths:
      - path: /port83
        backend:
          serviceName: echo-svc-ci
          servicePort: 83
---
